# gerenciador-memoria-virtual

./: .gitignore  CMakeLists.txt  Makefile  README.md  SignalsTest.c  boot.n  main.c  menu.c  n.md  nnc  pesquisar.txt  programa  saida  test.n  test_parser.n
files/: exemplo.json  index.html  script.js  simulador.css  simulador.html  simulador.js  style.css
src/: HashMap.c  HashMap.h  ProcessHashMap.c  ProcessHashMap.h  ProcessQueue.c  ProcessQueue.h  Simulador.c  Simulador.h  falloc.c  iniciar.sh  main.c  main_menu.c  main_menu.h  n.c  n.h  n_interpreter.c  n_interpreter.h  nalloc.c  nalloc.h  nnc.c  parser.c  process.c  process.h  programa  simulador_page.c  simulador_page.h  tabelas.c  tabelas.h  web_server.c  web_server.h
